# agent-energy-arena

./: .env.example  .gitignore  API.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LEADERBOARD.md  Makefile  README.md  RULES.md  TODO.md  docker-compose.yml  evaluate.py  pyproject.toml
.scratch/energy-ai-nexus/: PRD.md
.scratch/facility-economics-popup/: PRD.md
.scratch/happiness-population-driver/: PRD.md
.scratch/open-source-arena/: PRD.md
.scratch/workforce/: PRD.md
agents/: __init__.py  api_client.py  attach_runtime.py  base.py  llm.py  llm_react.py  prompts.py  scripted.py  state_summary.py  tool_dispatch.py
agents/grid_master/: __init__.py  agent.py
agents/langgraph_agent/: __init__.py  agent.py
agents/llm_react/: __init__.py  agent.py
agents/scripted/: __init__.py  agent.py
agents/tests/: scripted_seed_42.json  test_api_client.py  test_attach_runtime.py  test_evaluate_cli.py  test_langgraph_agent.py  test_llm.py  test_llm_react.py  test_nvidia_live.py  test_scripted_smoke.py  test_tool_dispatch.py
baselines/: seed_42.json
baselines/arena/: baseline-42.json  economy_stress-42.json  grid_stress-42.json
docs/: hackathon-brief.md
docs/adr/: 0002-world-owns-its-wire-format-dicts.md  (+1 more)
docs/agents/: langgraph-tour.md
ralph/: afk.sh  once.sh  prompt.md
scenarios/: SCENARIOS.md
scripts/: bench_llm.py  score_run.py
submit/: agent.py
tests/: test_replay.py
world/: api.py  catalog.py  config.py  economy.py  events.py  grid.py  hourly_tick.py  pipelines.py  placement.py  population.py  power.py  preview.py  pricing.py  recorder.py  scenario.py  scoring.py  sim.py  snapshots.py  state.py  state_view.py  subsurface.py  weather.py  workforce.py
(+102 files in other folders)
