[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-ai-nexus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "numpy>=1.26",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["world*", "agents*"]
exclude = ["world.tests*"]

[tool.pytest.ini_options]
testpaths = ["world/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["runs", ".venv"]

[tool.ruff.lint]
# E,W = pycodestyle; F = pyflakes; I = isort; B = flake8-bugbear;
# UP = pyupgrade; SIM = flake8-simplify; TID = banned-imports.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "TID"]
ignore = [
    "E501",  # line length: handled by formatter; long URLs/strings are fine.
    "B008",  # FastAPI uses `Depends(...)` etc. as default args.
]

[tool.ruff.lint.per-file-ignores]
"world/tests/*" = ["B011"]  # tests use plain `assert`.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["world"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = false
exclude = ["runs/", "\\.venv/"]

# Third-party libraries without bundled stubs.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true
